--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,7 @@
 @import "util/mixin";
 @import "util/color";
 @import "util/var";
+@import "util/hero";
 
 @import "layout/basic";
 @import "layout/header";
